# depaysement-lab

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: depaysement_bank_v2.json  mundane_seed_bank_en_v1.json
data/: anti_attractor_bank_en_v1.json  anti_attractor_bank_en_v2_soft.json  depaysement_bank_en_v3.json  lexicon_ja_legacy.json
docs/: backend_matrix.md  backend_support.md  coherence_displacement_observer_v08.md  depaysement_v2_notes.md  english_first_model_policy.md  meta_leak_and_run_artifacts.md  mlx_intervention.md  ontology_collapse_observer_v09.md  readable_ontology_collapse_frontier_v10.md  scorer_v07.md  steering_vector_preflight_v081.md
docs/research_notes/: 2026-05-15-frontier-selector-focus-best.md  2026-05-16-banded-frontier-generation.md  2026-05-16-banded-frontier-rating-sheet.md  2026-05-16-posthoc-selector-lab.md  2026-05-17-human-taste-pass.md  2026-05-20-mundane-attractor-causal-probe.md  2026-05-20-mundane-attractor-probe-results.md  2026-05-21-blended-anti-attractor-vector.md  2026-05-21-soft-anti-attractor-vector.md  2026-05-24-mundane-dual-guard-reselect.md
experiments/: README.md
experiments/frontier_sweep_banded_frontier_focus/: frontier_sweep_candidates.csv  frontier_sweep_manifest.json  frontier_sweep_report.json  (+8 more)
tests/: test_english_first_policy.py  test_frontier_pool.py  test_meta_leak_and_output.py  test_mlx_intervention_fake.py  test_observation_metrics.py  test_ontology_audit.py  test_ratings.py  test_reselect.py  test_seed_bank_cli.py  test_steering_preflight.py  test_structural_scorer_v07.py
(+58 files in other folders)
